--- a/changelog.txt
+++ b/changelog.txt
@@ -24,4 +24,5 @@ Changelog BBL Utility
 - Block Placer now uses blockItem#place instead of a mess of custom code, this should improve compatibility with various block types without the need for custom code for certain blocks. Now redstone controlled, by default on when powered with a redstone signal will turn off
 - Block Breaker completely rewritten, now uses Block#dropResource for loot, all enchantements should work correctly, now redstone controlled, by default on when powered with a redstone signal will turn off,
 - Resource Generator now has 2 tanks, these can be filled with any fluids, recipes now use fluids and fluids can be optionally consumed, redstone controlled, revamped JEI
-
+- Added fluid placer, places fluids from its tank
+- Added fluid collector, collects fluids into its tank
