--- a/changelog.txt
+++ b/changelog.txt
@@ -22,7 +22,8 @@ Changelog BBL Utility
 - Drying Table gui changed, recipe tweaked, durability removed now 200, soaking and drying recipes now in a single recipe type, JEI updated to show both soaking and drying recipes and progress bar changes to show soaking and drying, redstone controlled
 - Replaced usage of ResourceLocation.fromNamespaceAndPath(Utility.MOD_ID, name) with Utility.rl(name) for cleanliness
 - Block Placer now uses blockItem#place instead of a mess of custom code, this should improve compatibility with various block types without the need for custom code for certain blocks. Now redstone controlled, by default on when powered with a redstone signal will turn off
-- Block Breaker completely rewritten, now uses Block#dropResource for loot, all enchantements should work correctly, now redstone controlled, by default on when powered with a redstone signal will turn off,
+- Block Breaker completely rewritten, now uses Block#dropResource for loot, all enchantements should work correctly, now redstone controlled, by default on when powered with a redstone signal will turn off, can be filtered
 - Resource Generator now has 2 tanks, these can be filled with any fluids, recipes now use fluids and fluids can be optionally consumed, redstone controlled, revamped JEI
 - Added fluid placer, places fluids from its tank
-- Added fluid collector, collects fluids into its tank
+- Added fluid collector, collects fluids into its tank, can be filtered
+- Item Repairer now changes its speed based on the amount of damage to restore, redstone controlled, basically each damage point is a tick
