--- a/changelog.txt
+++ b/changelog.txt
@@ -7,8 +7,8 @@ Changelog BBL Utility
 - Crook added (same as opolis utilities, now has shift information)
 - Sapling Grower added (same as opolis utilities, uses "utility:valid_for_sapling_grower" tag for valid saplings, saplings tag, red and brown mushrooms are in this tag by default, now has shift information)
 - Animal Net, releasing and catching now done inside the item not through events, now has shift information, tooltips updated now all translatable, durability now works correctly
-- Loot Boxes removed, this will move into BBL Shops in the future
-- Catalogue Book removed, this will move into BBL Shops in the future
+- Loot Boxes removed, maybe become part of BBL Shops in the future
+- Catalogue/Catalogue Book removed
 - Death Stone, now uses GlobalPos instead of separate dimension and x,y,z values on the item, now has shift information, now works if the player returns to the main menu when they die upon respawning a death stone with the correct position is always given, death stone no longer given after the end dragon is killed and player returns the the overworld
 - Floating Block replaced with Floater Item, has shift information, when held in off hand will allow the main hand block to be placed in mid air, and water
 - Home Stone removed, underused item no need when most packs have FTB Essentials or similar with /home command
